--- a/package.json
+++ b/package.json
@@ -16,19 +16,21 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "antd": "^5.15.1",
     "axios": "^1.6.2",
     "install": "^0.13.0",
     "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.19.0",
     "react-router-dom": "^6.19.0",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.1",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.10.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
